--- a/public/js/templates/mymap.html
+++ b/public/js/templates/mymap.html
@@ -4,7 +4,7 @@
     <button class="circle" ng-click="showQueries = !showQueries" > ? </button>
 
     <div class="queries" ng-show="showQueries">
-      <button ng-click="max= markMaxSizeVessels()" > Find biggest ship </button>
+      <button ng-click="max= markMaxSizeVessels()" > Find biggest ships </button>
       <button ng-click="markVesselsBetweenCoordinates()"> Find all vessels with coordinate between (28,40) and (30,42) </button>
     </div>
   </div>
